2010-08-24  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15539: Unit Tests: $GLOBALS['TYPO3_DB']->link get lost during backup/ restore of global variables (thanks to Helmut Hummel)

2010-08-24  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15524: Create multiple pages wizard: add doktype, dynamic add more fields
	* Fixed bug #15502: localization links in list mode are broken (Thanks to Bjoern Pedersen)

2010-08-24  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Fluid and Extbase version numbers to 1.3.0alpha1. See ChangeLog.txt in Extbase/Fluid for a full list of changes.

2010-08-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15454: Provide a reason for logDeprecatedTypoScript()
	* Fixed bug #13623: Deprecation log for IMAGE.alttext does not work (Thanks to Sebastian Michaelsen)
	* Fixed bug #15541: Improve wording in Install Tool "All configuration"
	* Added feature #15538: Links inside Install Tool "All configuration"
	* Follow-up to #15454: Typo in PHPDoc comments (Thanks to Ismaël Bidau)

2010-08-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12583: htmlArea RTE: RTE fails to load due to security error

2010-08-23  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15534: t3lib_div::view_array: Improve rendering of objects (Thanks to Stefan Galinski)

2010-08-23  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15504: Description of TYPO3_CONF settings should allow HTML markup for readability (Thanks to Ernesto Baschny)
	* Fixed bug #15092: Ajax loaded items of inline records are encoded twice (Thanks to Martin Borer)
	* Fixed bug #15536: DebugConsole - Compat with ExtJS 3.2.x (broken resize event and double split bar) (Thanks to Stefan Galinski)
	* Updated sysexts version numbers and md5 values
	* Added feature #15513: Log ExtDirect Exceptions in DebugConsole (Thanks to Stefan Galinski)

2010-08-23  Xavier Perseguers  <typo3@perseguers.ch>
