@@ -1,5 +1,6 @@
 2010-08-24  Xavier Perseguers  <typo3@perseguers.ch>
 
+	* Added feature #15542: Frontend rendering should use prepared queries (1st step)
 	* Fixed bug #15539: Unit Tests: $GLOBALS['TYPO3_DB']->link get lost during backup/ restore of global variables (thanks to Helmut Hummel)
 
 2010-08-24  Steffen Kamper  <steffen@typo3.org>
